[tool.poetry]
name = "rs-bag2image-python"
version = "0.1.0"
description = "A Python script to extract RGB and depth frames from a Intel RealSense bagfile"
authors = ["cjiang2"]
readme = "README.md"
packages = [{include = "rs_bag2image_python"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
opencv-python = "^4.6.0.66"

[tool.poetry.dependencies.pyrealsense2]
version = "^2.50.0"
markers = "sys_platform == 'win64'"

[tool.poetry.dependencies.pyrealsense2-macosx]
version = "^2.50.0"
markers = "sys_platform == 'darwin'"

[tool.poetry.dependencies.pyrealsense]
version = "^2.2"
markers = "sys_platform == 'linux'"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
